# wedding_app

./: .gitignore  README.md  pyproject.toml  requirements.txt  storage.py
templates/: admin.html  create_event.html  gallery.html  upload.html
tests/: test_wedding_app.py
wedding_app/: app.py  storage.py
wedding_app/static/: logo.txt
wedding_app/static/css/: styles.css
wedding_app/templates/: gallery.html  home.html
