[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask",
    "python-dotenv",
    "openai",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "faiss-cpu",
    "azure-storage-blob",
    "python-docx",
    "python-pptx",
    "PyMuPDF",
    "PyPDF2",
    "docx",
    "qrcode",
]
